# test-the-skill

./: .gitignore  02 - LangChain-Fundamentals-Guide.md  02 - LangChain-Fundamentals-Issues-Pending Items.md  03 - LangChain-ReAct-Agent-Issues-Pending Items.md  03 - LangChain-ReAct-Agent-WebSearch-Guide.md  04 - LangGraph-ReAct-Agent-Issues-Pending Items.md  04 - LangGraph-ReAct-Agent-WebSearch-Guide.md  05 - LangGraph-CLI-Guide.md  05 - LangGraph-CLI-Issues-Pending Items.md  06 - LangChain-Prompt-Templates-Guide.md  06 - LangChain-Prompt-Templates-Issues-Pending Items.md  100 - Google-Cloud-Service-Account-Key-Guide-Issues-Pending Items.md  100 - Google-Cloud-Service-Account-Key-Guide.md  101 - Gmail-API-Integration-Guide-Issues-Pending Items.md  101 - Gmail-API-Integration-Guide-OAuth part.md  101 - Gmail-API-Integration-Guide.md  102 - Google-Workspace-APIs-Integration-Guide-Issues-Pending Items.md  102 - Google-Workspace-APIs-Integration-Guide-ts.md  103 - YouTube-Transcription-Guide-ts.md  110 - Gemini-File-Search-Tool-Guide.md  111 - Nano-Banana-API-Guide.md  CLAUDE.md  DSPy-Beginners-Guide.md  Empty-Folders-Transferred.md  Gmail-API-Integration-Guide.md  Google-Cloud-Credentials-Guide.md  Google-Cloud-Project-Scripting-Guide.md  LangChain-Fundamentals-Guide-TypeScript.md  LangChain-Fundamentals-Guide.md  LangChain-LangGraph-Chat-Guide.md  LangChain-Prompt-Templates-Guide.md  LangChain-ReAct-Agent-WebSearch-Guide.md  LangChain-vs-LangGraph-ReAct-Agent-Comparison.md  LangGraph-CLI-Guide.md  LangGraph-ReAct-Agent-WebSearch-Guide.md  UV-Python-Tool-Guide.md  pyproject.toml
02 - Langchain Fundamentals/: main.py
05 - LangGraph CLI Guide/: langgraph.json  main.py  pyproject.toml
05 - LangGraph CLI Guide/my_agent/: agent.py  azure_agent.py
05 - LangGraph CLI Guide/test_scripts/: test_basic_agent.py
06 - Langchain Prompt Templates/: .env  main.py  pyproject.toml
100 - Google Cloud Service Account Key/: main.py  pyproject.toml
LangChain ReAct Agent/: pyproject.toml
LangGraph ReAct Agent/: .env.example  config.py  pyproject.toml
(+171 files in other folders)
